Fix layout issue

--- a/frontend/src/components/Products.css
+++ b/frontend/src/components/Products.css
@@ -21,10 +21,11 @@
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
+    align-self: center;
 }
 
 .products-container .product-card {
-    flex: 1 1 300px; 
+    width: 1 1 250px; 
     max-width: 25%;
 }
 
